<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label_book_library_system"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/material_dynamic_primary40"
        android:text="@string/labelName"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_book_library_system"
        app:layout_constraintTop_toTopOf="parent">

        <!--        <TableRow-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            tools:ignore="UselessParent">-->

        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_column="1"-->
        <!--                android:layout_marginStart="@dimen/_10dp"-->
        <!--                android:text="@string/bookId"-->
        <!--                android:textSize="15sp" />-->

        <!--            <EditText-->
        <!--                android:id="@+id/book_id"-->
        <!--                android:layout_width="290dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginStart="20sp"-->
        <!--                android:width="150dp"-->
        <!--                android:autofillHints="B001"-->
        <!--                android:hint="@string/bookIdHint"-->
        <!--                android:textSize="20sp"-->
        <!--                tools:ignore="LabelFor,TextFields" />-->
        <!--        </TableRow>-->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="@dimen/_10dp"
                android:text="@string/taskName"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/task_name"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:width="150dp"
                android:autofillHints="Enter task name."
                android:hint="@string/taskNameHint"
                android:textSize="20sp"
                tools:ignore="LabelFor,TextFields" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="@dimen/_10dp"
                android:text="@string/taskDes"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/task_des"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:width="150dp"
                android:autofillHints="Enter task description."
                android:hint="@string/taskDesHint"
                android:textSize="20sp"
                tools:ignore="LabelFor,TextFields" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="@dimen/_10dp"
                android:text="@string/taskPriority"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/task_priority"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:width="150dp"
                android:autofillHints="@string/taskPriorityHint"
                android:hint="@string/taskPriorityHint"
                android:inputType="number"
                android:textSize="20sp"
                tools:ignore="LabelFor,TextFields" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="@dimen/_10dp"
                android:text="@string/taskDeadline"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/task_deadline"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:width="150dp"
                android:autofillHints="@string/taskDeadlineHint"
                android:hint="@string/taskDeadlineHint"
                android:inputType="date"
                android:textSize="20sp"
                tools:ignore="LabelFor,TextFields" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="350sp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="383dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="650dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/add"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/view"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow"
            android:text="@string/edit"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/delete"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

